--- a/web.html
+++ b/web.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>web</title>
+        <title>website</title>
 
     </head>
     <body>
-        <h1>This is header</h1>
-        <p>paragraph</p>
+        <p>paragraph_1</p>
+        <p>paragraph_2</p>
     </body>
 </html>
